--- a/landingpage/css/estilos.css
+++ b/landingpage/css/estilos.css
@@ -17,10 +17,6 @@
     list-style: none;
 }
 
-body {
-    margin: 20px;
-}
-
 /* ============================================= */
 /* ARRANCA LA SECCION DEL HEADER */
 
@@ -28,7 +24,6 @@ body {
 header {
     background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255)), radial-gradient(circle, rgb(255, 255, 255), rgb(0, 0, 0));
     display: flex;
-    margin: -20px -20px 30px -20px;
     height: 80vh;
     justify-content:center;
 }
@@ -56,11 +51,17 @@ header {
 
 .titulo {
     color: white;
-    font-size: 80px;
+    font-size: 9vw;
+    max-width: 300px;
     font-family: 'Marhey', sans-serif;
     text-transform: uppercase;
     line-height: 1.2;
     text-align: left;
+
+    @media (width > 930px) {
+        font-size: 85px;
+    }
+
 }
 
 .texto {
@@ -83,7 +84,11 @@ header {
     width: 80px;
     animation: rebotar 1s 6;
     position: relative;
-    top: -40px;
+
+    @media (width > 900px ) {
+        margin-top: -20px;
+    }
+
 }
 
 .signoBajar img {
@@ -93,7 +98,7 @@ header {
 @keyframes rebotar {
     0%, 20%, 50%, 80%, 100% {
       transform: translateY(0);
-      opacity: 1;
+      opacity: 0.5;
     }
     40% {
       transform: translateY(-20px);
@@ -103,6 +108,10 @@ header {
       transform: translateY(-10px);
       opacity: 1;
     }
+}
+
+.borrarSigno {
+    opacity: 0;
 }
 
 /* ============================================= */
@@ -283,4 +292,106 @@ header {
 }
 .wsp:not(:hover) {
     transition: 0.5s;
+}
+
+
+/*=================================*/
+/*MEDIAS PARA HACERLO RESPONSIVE */
+
+@media (width <= 770px) {
+    header {
+        max-width: 100%;
+        height: 80vh !important;
+    }
+
+    .header_container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .titulo {
+        max-width: none;
+        font-size: 10vw;
+        margin-top: 15%;
+        width: 80vw;
+        text-align: center;
+
+    }
+    .texto-imagen_container {
+        margin: 0 auto;
+    }
+
+    .imagen img {
+        width: 90vw;
+        margin-top: -40px;
+    }
+
+    .texto {
+        color: black;
+        width: 85vw;
+    }
+
+    .signoBajar {
+        margin-top: 50px;
+    }
+
+}
+
+/*PARA CELULARES*/
+@media (width < 450px) {
+
+    header {
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100vw;
+    }
+
+
+    .signoBajar {
+        position: relative;
+        top: -50px;
+    }
+
+    .titulo {
+        text-align: center;
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 10px;
+        font-size: 9.5vw;
+    }
+
+    .imagen {
+        text-align: center;
+    }
+
+    .texto {
+        display: flex;
+        margin: auto;
+        text-align: center;
+        justify-content: center;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .productos_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0  auto;
+        scale: 90%;
+    }
+
+    .productobrolygoku {
+        margin-bottom: 200px;
+    }
 }
