--- a/landingpage/css/estilos.css
+++ b/landingpage/css/estilos.css
@@ -22,7 +22,7 @@
 
 
 header {
-    background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255)), radial-gradient(circle, rgb(255, 255, 255), rgb(0, 0, 0));
+    background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255));
     display: flex;
     height: 80vh;
     justify-content:center;
