--- a/landingpage/css/figura.css
+++ b/landingpage/css/figura.css
@@ -41,18 +41,19 @@ ul h2 {
     color: white;
     font-family: 'Marhey', sans-serif;
     cursor: pointer;
-    font-size: 40px;
+    text-shadow: 5px 5px 2px rgba(0, 0, 0, 0.147);
 }
 
 .inicio {
     position: relative;
-    right: 90%;
+    right: 50%;
     top: 15px;
     text-decoration: none;
+    box-shadow: 4px 4px px solid black;
     color: rgb(0, 0, 0);
     font-family: 'Urbanist', sans-serif;
     font-weight: 600;
-
+    font-size: 15px;
 }
 
 .inicio:hover, h2:hover {
@@ -62,6 +63,10 @@ ul h2 {
 .inicio:not(:hover), h2:not(:hover) {
     color: rgb(0, 0, 0);
     transition: 0.4s;
+}
+
+.wsp {
+    filter: drop-shadow(0px 0px 4px rgb(8, 255, 8));
 }
 
 .wsp:hover {
@@ -101,7 +106,7 @@ ul h2 {
     width: 50vw;
     /* background: radial-gradient(circle,white, rgb(251, 216, 171)), linear-gradient(to left, antiquewhite, white); */
     background: conic-gradient(#f5dc89, #ffffff);
-
+    border-radius: 1rem;
 }
 
 .fotoPrincipal {
@@ -130,6 +135,10 @@ ul h2 {
 
 .base, .dibujo {
     object-fit: contain !important;
+}
+
+.tituloArriba {
+    display: none;
 }
 
 h3 {
@@ -254,4 +263,38 @@ h4 {
     background: rgba(255, 187, 0, 0.259);
 }
   
+/*=========================*/
+/*ARRANCAMOS CON LAS MEDIAS*/
+@media (width < 983px)  {
+    .tituloArriba {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+    }
+
+    h3 {
+        display: none;
+    }
+
+    .sectionContainer {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+
+    .fotoContainer {
+        width: 80vw;
+    }
+    .fotoPrincipal {
+        margin: auto;
+    }
+    .foto {
+        width: 25vw;
+    }
+    .botones {
+        margin-bottom: 80px;
+    }
+}
 
